# option_wheel_tracker

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  db.sqlite3  fly.toml  manage.py  prod_server.sh  pyproject.toml  requirements.dev  requirements.txt  setup.cfg  worker.py
catalog/: admin.py  business_day_count.py  constants.py  forms.py  implied_volatility.py  models.py  option_price_computation.py  schedule_async.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_auto_20201219_0813.py  0002_auto_20210112_0951.py  0003_auto_20201219_0817.py  0003_auto_20210117_1541.py  0004_auto_20201224_2132.py  0004_auto_20221023_1936.py  0005_auto_20201228_1424.py  0006_auto_20201230_1745.py
catalog/static/css/: styles.css
catalog/static/js/: d3_option_collateral.js  option_detail_table.js  option_wheel_table.js  profit_collateral_chart.js  (+3 more)
catalog/templates/: _base_wheel_table.html  _option_call_table.html  _option_put_table.html  _ticker_table.html  _user_table.html  active_wheels.html  all_active_wheels.html  all_completed_wheels.html  base_generic.html  base_wheel_table.html  completed_wheels.html  global_put_comparison.html  index.html  my_active_wheels.html  my_completed_wheels.html  my_total_profit.html  signup_complete.html  stockticker_list.html  todays_active_wheels.html  total_profit.html
catalog/templatetags/: filter_tags.py
option_wheel_tracker/: asgi.py  logging.py  settings.py  settings_development.py  settings_production.py  urls.py  wsgi.py
option_wheel_tracker/registration/: login.html
templates/registration/: login.html
(+16 files in other folders)
